--- a/styles/global.css
+++ b/styles/global.css
@@ -32,3 +32,14 @@ a {
 img {
   width: 100%;
 }
+
+address {
+  display: block;
+  height: 97px;
+  width: 240px;
+  font-family: Raleway, sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 135%;
+}
