--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,44 @@
 /* место для вашего кода */
+.header {
+  color: #000;
+  background-color: #fff;
+  margin: 92px 49px 92px 51px;
+  display: grid;
+  grid-template: 109px/597px 148fr 1fr;
+  place-content: center space-between;
+  width: 1340px;
+}
+
+.header__links-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  gap: 32px;
+  list-style: circle;
+  font-family: Raleway, sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: normal;
+  margin: 43px 209px 43px 0;
+}
+
+.header__links-list-item {
+  border-bottom: 1px solid currentColor;
+}
+
+.header__links-list-item_no-bullit {
+  list-style-type: none;
+}
+
+.header__link {
+  display: inline-block;
+  text-decoration: none;
+}
+
+.header__logo {
+  display: block;
+  width: 148px;
+  height: 105px;
+  margin-bottom: 4px;
+}
+
