--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,9 @@
-/* место для вашего кода */
 .header {
   color: #000;
   margin: 92px 49px 92px 51px;
   display: grid;
-  grid-template: 109px/597px 148fr 1fr;
-  place-content: center space-between;
-  width: 100%;
+  grid-template: 109px/2fr 2fr 1fr;
+  place-content: start space-between;
 }
 
 .header__links-list {
@@ -18,7 +16,8 @@
   font-size: 18px;
   font-weight: 400;
   line-height: normal;
-  margin: 43px 209px 43px 0;
+  align-self: end;
+  flex-shrink: 0;
 }
 
 .header__links-list-item {
@@ -39,6 +38,7 @@
   width: 148px;
   height: 105px;
   margin-bottom: 4px;
+  justify-self: center;
 }
 
 .cover {
@@ -46,14 +46,19 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  margin-top: 96px;
-  margin-bottom: 180px;
   width: 100%;
+  position: relative;
+  z-index: -1;
 }
 
 .overlay {
   background-color: rgb(0 0 0/0.6);
-  z-index: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
 }
 
 .cover__title {
@@ -67,7 +72,8 @@
   font-weight: 700;
   line-height: 115%;
   text-transform: uppercase;
-  margin: 165px 50px 237px 50px;
+  padding: 165px 50px 0 50px;
+  z-index: 1;
 }
 
 .letter-spacing-extended {
@@ -89,7 +95,7 @@
 .cover__description {
   display: flex;
   flex-direction: row;
-  justify-content: end;
+  justify-content: ;
 }
 
 .cover__description-text {
@@ -102,7 +108,7 @@
   line-height: 28px;
   text-transform: uppercase;
   word-spacing: 20px;
-  margin: 147px 78px 62px 422px;
+  padding: 147px 78px 62px 422px;
 }
 
 .bet-button {
@@ -122,7 +128,7 @@
 
 .lots {
   display: block;
-  margin: 180px 50px 181px 50px;
+  padding: 180px 50px;
 }
 
 .lots__heading {
@@ -162,8 +168,12 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: s;
+  justify-content: space-between;
+  align-content: start;
+  flex-shrink: 0;
   padding: 50px 40px;
+  position: relative;
+  z-index: 1;
 }
 
 .card_type_film {
@@ -194,6 +204,7 @@
   font-weight: 700;
   line-height: 120%;
   text-decoration-line: underline;
+  text-underline-offset: 3px;
   text-transform: uppercase;
 }
 
@@ -206,31 +217,42 @@
 }
 
 .lots__look-more-link {
+  display: block;
   color: #000;
   font-family: Raleway, sans-serif;
   font-size: 20px;
   font-weight: 400;
   line-height: normal;
-  text-decoration: none;
+  text-decoration-line: underline;
+  text-underline-offset: 5px;
+  margin: 30px 1108px 2px 40px;
 }
 
 .about {
   display: grid;
-  grid-template: 1fr/1fr 1fr;
-  margin: 181px 50px 180px 50px;
+  grid-template: 1fr/430px 1fr;
+  row-gap: 25px;
+  margin: 0 50px 180px;
 }
 
 .about__logo {
+  display: block;
   width: 240px;
   height: 240px;
   border-radius: 50%;
   background-color: #000;
+  grid-area: about-logo;
+  margin: 0 95px 248px;
 }
 
 .about__logo-image {
   width: 148px;
   height: 114px;
   margin: 63px 46px;
+}
+
+.about__column-description {
+  margin-top: 100px;
 }
 
 .about__title {
@@ -255,12 +277,11 @@
 }
 
 .footer {
-  color: #000;
-  margin: 92px 49px 92px 51px;
   display: grid;
-  grid-template: 109px/597px 148fr 1fr;
-  place-content: center space-between;
-  width: 100%;
+  grid-template-rows: 1fr;
+  grid-template-columns: repeat(5, auto);
+  justify-content: start;
+  margin: 0 50px 90px;
 }
 
 .footer__menu-list {
@@ -268,6 +289,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: #000;
+  font-family: Raleway, sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: normal;
 }
 
 .footer__menu-list-item {
@@ -275,7 +301,7 @@
 }
 
 .footer__menu-link_active {
-  list-style-type: none;
+  text-decoration: none;
 }
 
 .footer__menu-link {
