--- a/styles/global.css
+++ b/styles/global.css
@@ -54,3 +54,13 @@ address {
   text-decoration: none;
   border-bottom: 1px solid currentColor;
 }
+
+.overlay {
+  background-color: rgb(0 0 0/0.6);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+}
