--- a/styles/style.css
+++ b/styles/style.css
@@ -2,8 +2,8 @@
   color: #000;
   margin: 92px 49px 92px 51px;
   display: grid;
-  grid-template: 109px/2fr 2fr 1fr;
-  place-content: start space-between;
+  grid-template: 109px/1fr 148px 1fr;
+  place-content: center space-between;
 }
 
 .header__links-list {
@@ -18,6 +18,8 @@
   line-height: normal;
   align-self: end;
   flex-shrink: 0;
+  padding-top: 43px;
+  padding-bottom: 45px;
 }
 
 .header__links-list-item {
@@ -41,6 +43,10 @@
   justify-self: center;
 }
 
+.header__address {
+  justify-self: end;
+}
+
 .cover {
   background-image: url(../images/cover.jpg);
   background-repeat: no-repeat;
@@ -48,16 +54,6 @@
   background-size: cover;
   width: 100%;
   position: relative;
-  z-index: -1;
-}
-
-.overlay {
-  background-color: rgb(0 0 0/0.6);
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
   z-index: -1;
 }
 
@@ -95,7 +91,8 @@
 .cover__description {
   display: flex;
   flex-direction: row;
-  justify-content: ;
+  justify-content: space-between;
+  width: 100%;
 }
 
 .cover__description-text {
@@ -109,6 +106,7 @@
   text-transform: uppercase;
   word-spacing: 20px;
   padding: 147px 78px 62px 422px;
+  flex-shrink: 0;
 }
 
 .bet-button {
@@ -124,6 +122,7 @@
   padding: 12px 32px;
   border: 1px solid #fff;
   margin: 147px 50px 50px 78px;
+  flex-shrink: 0;
 }
 
 .lots {
@@ -226,6 +225,7 @@
   text-decoration-line: underline;
   text-underline-offset: 5px;
   margin: 30px 1108px 2px 40px;
+  width: 192px;
 }
 
 .about {
@@ -279,9 +279,10 @@
 .footer {
   display: grid;
   grid-template-rows: 1fr;
-  grid-template-columns: repeat(5, auto);
+  grid-template-columns: 1fr 149px 1fr;
   justify-content: start;
   margin: 0 50px 90px;
+
 }
 
 .footer__menu-list {
@@ -313,7 +314,13 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: start;
   list-style: none;
   width: 240px;
   height: 48px;
+}
+
+.footer__social-icon {
+  height: 48px;
+  width: 48px;
 }
