--- a/styles/global.css
+++ b/styles/global.css
@@ -11,6 +11,11 @@ body {
   background-color: #fff;
 }
 
+main {
+  width: 100%;
+  margin: 0;
+}
+
 h1,
 h2,
 h3,
@@ -58,9 +63,6 @@ address {
 .overlay {
   background-color: rgb(0 0 0/0.6);
   position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  inset: 0;
   z-index: -1;
 }
