--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 .header {
   color: #000;
-  margin: 92px 49px 92px 51px;
+  padding: 92px 49px 92px 51px;
   display: grid;
   grid-template: 109px/1fr 148px 1fr;
   place-content: center space-between;
@@ -39,8 +39,13 @@
   display: block;
   width: 148px;
   height: 105px;
-  margin-bottom: 4px;
   justify-self: center;
+  margin-bottom: 4px;
+}
+
+.header__logo-image {
+  width: 100%;
+  height: 100%;
 }
 
 .header__address {
@@ -48,6 +53,7 @@
 }
 
 .cover {
+  display: block;
   background-image: url(../images/cover.jpg);
   background-repeat: no-repeat;
   background-position: center;
@@ -68,7 +74,7 @@
   font-weight: 700;
   line-height: 115%;
   text-transform: uppercase;
-  padding: 165px 50px 0 50px;
+  letter-spacing: 20px;
   z-index: 1;
 }
 
@@ -76,27 +82,32 @@
   letter-spacing: 30px;
 }
 
-.aligned-text {
+.aligned-text-left {
   display: block;
+  padding: 165px 50px 0;
 }
 
 .aligned-text_center {
+  display: block;
   text-align: center;
+  padding: 20px 110px 20px 50px;
 }
 
 .aligned-text_right {
   text-align: right;
+  display: block;
+  padding: 0 50px 0;
 }
 
 .cover__description {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  width: 100%;
+  display: grid;
+  grid-template: 1fr/1fr 257px;
+  place-content: center space-between;
+  padding: 135px 50px 50px 0;
 }
 
 .cover__description-text {
-  display: block;
+  display: inline;
   color: #fff;
   text-align: center;
   font-family: Raleway, sans-serif;
@@ -105,8 +116,7 @@
   line-height: 28px;
   text-transform: uppercase;
   word-spacing: 20px;
-  padding: 147px 78px 62px 422px;
-  flex-shrink: 0;
+  padding: 12px 78px 62px 422px;
 }
 
 .bet-button {
@@ -121,7 +131,7 @@
   display: block;
   padding: 12px 32px;
   border: 1px solid #fff;
-  margin: 147px 50px 50px 78px;
+  margin: 135px 50px 50px 78px;
   flex-shrink: 0;
 }
 
@@ -138,7 +148,7 @@
   font-weight: 700;
   line-height: normal;
   text-transform: uppercase;
-  margin-left: 40px;
+  padding-left: 40px;
 }
 
 .lots__card-list {
@@ -146,14 +156,13 @@
   list-style: none;
   flex-wrap: wrap;
   justify-content: space-around;
+  padding: 27px 0 30px;
   row-gap: 25px;
-  column-gap: 25px;
-  margin: 27px 50px 30px 50px;
 }
 
 .lots__card-list-item {
   max-width: 430px;
-  min-height: 100px;
+  max-height: 450px;
   flex-grow: 1;
 }
 
@@ -167,8 +176,9 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  gap: 30px;
   justify-content: space-between;
-  align-content: start;
+  align-content: space-between;
   flex-shrink: 0;
   padding: 50px 40px;
   position: relative;
@@ -202,9 +212,9 @@
   font-size: 22px;
   font-weight: 700;
   line-height: 120%;
+  text-transform: uppercase;
   text-decoration-line: underline;
   text-underline-offset: 3px;
-  text-transform: uppercase;
 }
 
 .card__text {
@@ -224,7 +234,8 @@
   line-height: normal;
   text-decoration-line: underline;
   text-underline-offset: 5px;
-  margin: 30px 1108px 2px 40px;
+  padding-bottom: 2px;
+  margin-left: 40px;
   width: 192px;
 }
 
@@ -232,7 +243,7 @@
   display: grid;
   grid-template: 1fr/430px 1fr;
   row-gap: 25px;
-  margin: 0 50px 180px;
+  padding: 0 50px 180px;
 }
 
 .about__logo {
@@ -282,7 +293,7 @@
   grid-template-columns: 1fr 149px 1fr;
   row-gap: 356px;
   place-content: start space-between;
-  margin: 0 50px 90px;
+  padding: 0 50px 90px;
 }
 
 .footer__menu-list {
