--- a/styles/style.css
+++ b/styles/style.css
@@ -1,25 +1,25 @@
 .header {
-  color: #000;
   padding: 92px 49px 92px 51px;
   display: grid;
   grid-template: 109px/1fr 148px 1fr;
   place-content: center space-between;
+  color: #000;
 }
 
 .header__links-list {
+  padding-top: 43px;
+  padding-bottom: 45px;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
+  flex-shrink: 0;
   gap: 32px;
+  align-self: end;
   list-style: circle;
   font-family: Raleway, sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: normal;
-  align-self: end;
-  flex-shrink: 0;
-  padding-top: 43px;
-  padding-bottom: 45px;
 }
 
 .header__links-list-item {
@@ -36,16 +36,16 @@
 }
 
 .header__logo {
-  display: block;
-  width: 148px;
   height: 105px;
-  justify-self: center;
+  width: 148px;
   margin-bottom: 4px;
+  display: block;
+  justify-self: center;
 }
 
 .header__logo-image {
-  width: 100%;
   height: 100%;
+  width: 100%;
 }
 
 .header__address {
@@ -53,61 +53,67 @@
 }
 
 .cover {
-  display: block;
+  width: 100%;
+  position: relative;
+  z-index: -1;
   background-image: url(../images/cover.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  width: 100%;
-  position: relative;
-  z-index: -1;
+  display: block;
 }
 
 .cover__title {
+  z-index: 1;
   color: #fff;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
   font-family: Raleway, sans-serif;
   font-size: 100px;
-  font-style: normal;
   font-weight: 700;
   line-height: 115%;
   text-transform: uppercase;
-  letter-spacing: 20px;
-  z-index: 1;
-}
-
-.letter-spacing-extended {
-  letter-spacing: 30px;
 }
 
 .aligned-text-left {
-  display: block;
   padding: 165px 50px 0;
+  display: block;
+  letter-spacing: 30px;
 }
 
 .aligned-text_center {
+  padding: 20px 110px 20px 50px;
   display: block;
   text-align: center;
-  padding: 20px 110px 20px 50px;
+  letter-spacing: 30px;
 }
 
 .aligned-text_right {
-  text-align: right;
-  display: block;
   padding: 0 50px 0;
+  display: block;
+  text-align: right;
+  letter-spacing: 30px;
+}
+
+.letter-spacing-extended {
+  margin-left: -30px;
+  letter-spacing: 60px;
+}
+
+.no-letter-spacing {
+  margin-left: 30px;
+  margin-right: -30px;
 }
 
 .cover__description {
+  padding: 135px 50px 50px 0;
   display: grid;
   grid-template: 1fr/1fr 257px;
   place-content: center space-between;
-  padding: 135px 50px 50px 0;
 }
 
 .cover__description-text {
-  display: inline;
+  padding-top: 12px;
+  display: block;
+  justify-self: center;
   color: #fff;
   text-align: center;
   font-family: Raleway, sans-serif;
@@ -116,10 +122,15 @@
   line-height: 28px;
   text-transform: uppercase;
   word-spacing: 20px;
-  padding: 12px 78px 62px 422px;
 }
 
 .bet-button {
+  height: 52px;
+  width: 257px;
+  padding: 12px 32px;
+  border: 1px solid #fff;
+  display: block;
+  flex-shrink: 0;
   color: #fff;
   text-align: center;
   font-family: Raleway, sans-serif;
@@ -128,19 +139,15 @@
   line-height: normal;
   text-transform: uppercase;
   background-color: transparent;
-  display: block;
-  padding: 12px 32px;
-  border: 1px solid #fff;
-  margin: 135px 50px 50px 78px;
-  flex-shrink: 0;
 }
 
 .lots {
-  display: block;
   padding: 180px 50px;
+  display: block;
 }
 
 .lots__heading {
+  padding-left: 40px;
   display: block;
   color: #000;
   font-family: Raleway, sans-serif;
@@ -148,41 +155,40 @@
   font-weight: 700;
   line-height: normal;
   text-transform: uppercase;
-  padding-left: 40px;
 }
 
 .lots__card-list {
-  display: flex;
-  list-style: none;
-  flex-wrap: wrap;
-  justify-content: space-around;
   padding: 27px 0 30px;
+  display: flex;
+  justify-content: space-around;
   row-gap: 25px;
+  flex-wrap: wrap;
+  list-style: none;
 }
 
 .lots__card-list-item {
-  max-width: 430px;
   max-height: 450px;
+  max-width: 430px;
   flex-grow: 1;
 }
 
 .card-link {
+  height: 100%;
   display: block;
   text-decoration: none;
-  height: 100%;
 }
 
 .card {
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
-  justify-content: space-between;
-  align-content: space-between;
-  flex-shrink: 0;
   padding: 50px 40px;
   position: relative;
   z-index: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-content: space-between;
+  gap: 30px;
+  flex-shrink: 0;
 }
 
 .card_type_film {
@@ -226,6 +232,9 @@
 }
 
 .lots__look-more-link {
+  width: 192px;
+  margin-left: 40px;
+  padding-bottom: 2px;
   display: block;
   color: #000;
   font-family: Raleway, sans-serif;
@@ -234,31 +243,28 @@
   line-height: normal;
   text-decoration-line: underline;
   text-underline-offset: 5px;
-  padding-bottom: 2px;
-  margin-left: 40px;
-  width: 192px;
 }
 
 .about {
+  padding: 0 50px 180px;
   display: grid;
   grid-template: 1fr/430px 1fr;
   row-gap: 25px;
-  padding: 0 50px 180px;
 }
 
 .about__logo {
-  display: block;
-  width: 240px;
   height: 240px;
-  border-radius: 50%;
-  background-color: #000;
-  grid-area: about-logo;
+  width: 240px;
   margin: 0 95px 248px;
+  border-radius: 50%;
+  display: block;
+  grid-area: about-logo;
+  background-color: #000;
 }
 
 .about__logo-image {
-  width: 148px;
   height: 114px;
+  width: 148px;
   margin: 63px 46px;
 }
 
@@ -267,13 +273,13 @@
 }
 
 .about__title {
+  margin-bottom: 100px;
   color: #000;
   font-family: Raleway, sans-serif;
   font-size: 40px;
   font-weight: 700;
   line-height: normal;
   text-transform: uppercase;
-  margin-bottom: 100px;
 }
 
 .about__text {
@@ -288,16 +294,15 @@
 }
 
 .footer {
+  padding: 0 50px 90px;
   display: grid;
   grid-template-rows: 97px;
   grid-template-columns: 1fr 149px 1fr;
-  row-gap: 356px;
   place-content: start space-between;
-  padding: 0 50px 90px;
+  row-gap: 356px;
 }
 
 .footer__menu-list {
-  list-style: none;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -306,6 +311,7 @@
   font-size: 18px;
   font-weight: 400;
   line-height: normal;
+  list-style: none;
 }
 
 .footer__menu-list-item {
@@ -322,14 +328,14 @@
 }
 
 .footer__social-list {
+  height: 48px;
+  width: 240px;
   justify-self: end;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: start;
   list-style: none;
-  height: 48px;
-  width: 240px;
 }
 
 .footer__social-icon {
