--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 .header {
-  padding: 92px 49px 92px 51px;
+  padding: 91px 80px 93px 51px;
   display: grid;
   grid-template: 109px/1fr 148px 1fr;
   place-content: center space-between;
@@ -7,7 +7,7 @@
 }
 
 .header__links-list {
-  padding-top: 43px;
+  padding-top: 45px;
   padding-bottom: 45px;
   display: flex;
   flex-direction: row;
@@ -22,17 +22,23 @@
   line-height: normal;
 }
 
-.header__links-list-item {
-  border-bottom: 1px solid currentColor;
-}
-
 .header__links-list-item_no-bullit {
   list-style-type: none;
 }
 
 .header__link {
+  padding-bottom: 1px;
   display: inline-block;
   text-decoration: none;
+  border-bottom: 1px solid currentColor;
+}
+
+.header__link:hover {
+  color: blue;
+}
+
+.header__link-active {
+  border-bottom: none;
 }
 
 .header__logo {
@@ -50,12 +56,13 @@
 
 .header__address {
   justify-self: end;
+  align-self: center;
 }
 
 .cover {
-  width: 100%;
+  max-width: 1440px;
   position: relative;
-  z-index: -1;
+  z-index: 0;
   background-image: url(../images/cover.jpg);
   background-repeat: no-repeat;
   background-position: center;
@@ -64,7 +71,11 @@
 }
 
 .cover__title {
+  padding: 0 50px;
   z-index: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
   color: #fff;
   font-family: Raleway, sans-serif;
   font-size: 100px;
@@ -73,64 +84,64 @@
   text-transform: uppercase;
 }
 
+.aligned-text {
+  display: inline-block;
+}
+
 .aligned-text-left {
-  padding: 165px 50px 0;
-  display: block;
-  letter-spacing: 30px;
+  padding-top: 165px;
+  letter-spacing: 3px;
 }
 
 .aligned-text_center {
-  padding: 20px 110px 20px 50px;
-  display: block;
+  padding-top: 6px;
   text-align: center;
   letter-spacing: 30px;
 }
 
 .aligned-text_right {
-  padding: 0 50px 0;
-  display: block;
+  padding-bottom: 2px;
   text-align: right;
   letter-spacing: 30px;
 }
 
 .letter-spacing-extended {
-  margin-left: -30px;
   letter-spacing: 60px;
 }
 
 .no-letter-spacing {
-  margin-left: 30px;
-  margin-right: -30px;
+  letter-spacing: 0;
 }
 
 .cover__description {
-  padding: 135px 50px 50px 0;
+  padding: 125px 50px 50px 0;
   display: grid;
-  grid-template: 1fr/1fr 257px;
+  grid-template: 1fr/422px 1fr 257px;
   place-content: center space-between;
 }
 
 .cover__description-text {
   padding-top: 12px;
   display: block;
-  justify-self: center;
+  justify-self: start;
+  grid-column: 2/3;
   color: #fff;
-  text-align: center;
   font-family: Raleway, sans-serif;
   font-size: 22px;
   font-weight: 400;
   line-height: 28px;
   text-transform: uppercase;
-  word-spacing: 20px;
+  word-spacing: 1.05rem;
 }
 
 .bet-button {
-  height: 52px;
-  width: 257px;
+  min-height: 52px;
+  min-width: 257px;
   padding: 12px 32px;
   border: 1px solid #fff;
   display: block;
   flex-shrink: 0;
+  grid-column: 3/4;
   color: #fff;
   text-align: center;
   font-family: Raleway, sans-serif;
@@ -139,15 +150,23 @@
   line-height: normal;
   text-transform: uppercase;
   background-color: transparent;
+  cursor: pointer;
+}
+
+.bet-button:hover {
+  color: blue;
+  border-color: blue;
 }
 
 .lots {
-  padding: 180px 50px;
+  max-width: 1340px;
+  padding: 180px 50px 179px;
   display: block;
 }
 
 .lots__heading {
   padding-left: 40px;
+  padding-bottom: 27px;
   display: block;
   color: #000;
   font-family: Raleway, sans-serif;
@@ -158,17 +177,18 @@
 }
 
 .lots__card-list {
-  padding: 27px 0 30px;
+  padding-bottom: 30px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  gap: 25px;
   row-gap: 25px;
   flex-wrap: wrap;
   list-style: none;
 }
 
 .lots__card-list-item {
-  max-height: 450px;
-  max-width: 430px;
+  min-height: 450px;
+  width: 430px;
   flex-grow: 1;
 }
 
@@ -189,27 +209,21 @@
   align-content: space-between;
   gap: 30px;
   flex-shrink: 0;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .card_type_film {
   background-image: url(../images/card-lot-01.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
 }
 
 .card_type_book {
   background-image: url(../images/card-lot-02.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
 }
 
 .card_type_picture {
   background-image: url(../images/card-lot-03.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
 }
 
 .card__title {
@@ -232,10 +246,9 @@
 }
 
 .lots__look-more-link {
-  width: 192px;
   margin-left: 40px;
   padding-bottom: 2px;
-  display: block;
+  display: inline-block;
   color: #000;
   font-family: Raleway, sans-serif;
   font-size: 20px;
@@ -245,17 +258,22 @@
   text-underline-offset: 5px;
 }
 
+.lots__look-more-link:hover {
+  color: blue;
+}
+
 .about {
-  padding: 0 50px 180px;
+  max-width: 1340px;
+  padding: 0 50px 183px;
   display: grid;
   grid-template: 1fr/430px 1fr;
-  row-gap: 25px;
+  column-gap: 25px;
 }
 
 .about__logo {
   height: 240px;
   width: 240px;
-  margin: 0 95px 248px;
+  margin: 0 95px 0;
   border-radius: 50%;
   display: block;
   grid-area: about-logo;
@@ -269,37 +287,41 @@
 }
 
 .about__column-description {
-  margin-top: 100px;
+  margin-top: 105px;
 }
 
 .about__title {
-  margin-bottom: 100px;
+  margin-bottom: 103px;
   color: #000;
   font-family: Raleway, sans-serif;
   font-size: 40px;
   font-weight: 700;
-  line-height: normal;
+  line-height: 100%;
   text-transform: uppercase;
 }
 
 .about__text {
-  display: flex;
-  flex-direction: column;
-  gap: 25px;
+  min-width: 885px;
+  display: block;
+  padding-bottom: 30px;
   color: #000;
   font-family: Raleway, sans-serif;
   font-size: 20px;
   font-weight: 400;
-  line-height: normal;
+  line-height: 115%;
+}
+
+.about__text-last-paragraph {
+  padding-bottom: 0;
 }
 
 .footer {
-  padding: 0 50px 90px;
+  padding: 0 100px 90px 50px;
   display: grid;
   grid-template-rows: 97px;
   grid-template-columns: 1fr 149px 1fr;
   place-content: start space-between;
-  row-gap: 356px;
+  column-gap: 356px;
 }
 
 .footer__menu-list {
@@ -314,22 +336,24 @@
   list-style: none;
 }
 
-.footer__menu-list-item {
+.footer__menu-link {
+  display: inline-block;
+  text-decoration: none;
   border-bottom: 1px solid currentColor;
+}
+
+.footer__menu-link:hover {
+  color: blue;
 }
 
 .footer__menu-link_active {
   text-decoration: none;
-}
-
-.footer__menu-link {
-  display: inline-block;
-  text-decoration: none;
+  border-bottom: none;;
 }
 
 .footer__social-list {
-  height: 48px;
-  width: 240px;
+  min-height: 48px;
+  min-width: 240px;
   justify-self: end;
   display: flex;
   flex-direction: row;
