--- a/styles/style.css
+++ b/styles/style.css
@@ -71,7 +71,7 @@
 }
 
 .cover__title {
-  padding: 0 50px;
+  padding: 165px 50px 2px;
   z-index: 1;
   display: flex;
   flex-direction: column;
@@ -85,24 +85,17 @@
 }
 
 .aligned-text {
-  display: inline-block;
-}
-
-.aligned-text-left {
-  padding-top: 165px;
-  letter-spacing: 3px;
+  letter-spacing: 30px;
 }
 
 .aligned-text_center {
   padding-top: 6px;
   text-align: center;
-  letter-spacing: 30px;
 }
 
 .aligned-text_right {
-  padding-bottom: 2px;
+
   text-align: right;
-  letter-spacing: 30px;
 }
 
 .letter-spacing-extended {
@@ -114,7 +107,7 @@
 }
 
 .cover__description {
-  padding: 125px 50px 50px 0;
+  padding: 125px 50px 49px 0;
   display: grid;
   grid-template: 1fr/422px 1fr 257px;
   place-content: center space-between;
@@ -159,8 +152,8 @@
 }
 
 .lots {
-  max-width: 1340px;
-  padding: 180px 50px 179px;
+  max-width: 1440px;
+  padding: 181px 50px 179px;
   display: block;
 }
 
@@ -177,9 +170,8 @@
 }
 
 .lots__card-list {
-  padding-bottom: 30px;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
   gap: 25px;
   row-gap: 25px;
   flex-wrap: wrap;
@@ -247,15 +239,15 @@
 
 .lots__look-more-link {
   margin-left: 40px;
-  padding-bottom: 2px;
+  padding-top: 30px;
   display: inline-block;
   color: #000;
   font-family: Raleway, sans-serif;
   font-size: 20px;
   font-weight: 400;
   line-height: normal;
-  text-decoration-line: underline;
-  text-underline-offset: 5px;
+  text-decoration: none;
+  border-bottom: 1px solid currentColor;
 }
 
 .lots__look-more-link:hover {
@@ -316,7 +308,7 @@
 }
 
 .footer {
-  padding: 0 100px 90px 50px;
+  padding: 1px 100px 90px 50px;
   display: grid;
   grid-template-rows: 97px;
   grid-template-columns: 1fr 149px 1fr;
